# fhk

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.dep  README.md  _ctypes.pyx  api.h  arena.c  arena.h  asmdef.lua  asserts.h  bcloader  build.c  build.h  build.rs  cmd.c  co.h  co_asm.S  co_builtin.c  co_builtin.h  co_libco.c  co_libco.h  co_x86_64.S  conf.h  debug.c  debug.h  def.h  errmsg.h  fhk.h  fhk.lua  fhk_api.lua  fhk_api.pyx  fhk_cdef.lua.h  fhk_clib.lua  fhk_ctypes.lua  fhk_driver.lua  fhk_g.lua  fhk_lang_Expr.lua  fhk_lang_Lua.lua  (+25 more)
data/: call.R  call.lua  host.lua  tensor.lua
fhk-py/: setup.py
src/: array.rs  bitmap.rs  bump.rs  bytestring.rs  compile.rs  computereset.rs  concat.rs  controlflow.rs  data.rs  dataflow.rs  dl.rs  dump.rs  emit.rs  err.rs  finalize.rs  graph.rs  hash.rs  host_Lua.rs  image.rs  index.rs  intern.rs  intrinsics.rs  ir.rs  lang.rs  lang_C.rs  lang_Lua.rs  lang_R.rs  lang_Table.rs  layout.rs  lex.rs  lib.rs  link.rs  lower.rs  mcode.rs  mem.rs  minivec.rs  mmap.rs  obj.rs  opt_control.rs  opt_fold.rs  (+21 more)
tests/: .proverc  C-call.t  C-string-param.t  Lua-call.t  Lua-chain.t  Lua-out-tensor.t  Lua-string-param.t  Lua-syntax-error.t  Lua-vector-arg.t  R-call.t  R-matrix.t  R-multi-return.t  R-string-param.t  R-vector-arg.t  R-vector-return.t  abort.t  anyall.t  api.t  block-guard-schedule.t  concat.t  csv-file.t  csv-interpolate.t  csv.t  dyn-prefix.t  dyn-table.t  example.g.lua  example_mod.lua  fhk.t  fpmath.t  function-avail-arg.t  function-avail.t  function-call-func.t  function-vref.t  function.t  iter-vget-vector.t  (+66 more)
(+8 files in other folders)
