[package]
name = "fhk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[dependencies]
iced-x86 = { version = "1.21.0", default-features = false, features = ["no_std", "decoder", "fast_fmt"], optional = true }
cfg-if = "1.0.0"
const_format = "0.2.32"
cranelift-codegen = { version = "0.111.0", default-features = false, features = ["core", "host-arch"] }
cranelift-entity = "0.111.0"
cranelift-native = "0.111.0"
enumset = "1.1.3"
hashbrown = { version = "0.14.5", default-features = false }
logos = "0.14.1"
rustc-hash = { version = "2.0.0", default-features = false }
zerocopy = { version = "0.8.7", default-features = false, features = ["alloc", "derive"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.155", default-features = false }

[features]
default = [ "host-Lua", "lang-C", "lang-Lua", "lang-R" ]
host-Lua = []
lang-C = []
lang-Lua = []
lang-R = []
trace = []
